Weblayout Broadcasts added

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <main class="main">
       @include('partials/hero.html')
       @include('partials/podcasts.html')
+      @include('partials/broadcasts.html')
     </main>
 
     @include('partials/footer.html')
