--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       @include('partials/hero.html')
       @include('partials/podcasts.html')
       @include('partials/broadcasts.html')
+      @include('partials/guests.html')
     </main>
 
     @include('partials/footer.html')
