--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       @include('partials/podcasts.html')
       @include('partials/broadcasts.html')
       @include('partials/guests.html')
+      @include('partials/playlists.html')
     </main>
 
     @include('partials/footer.html')
